--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=Laravel
+APP_NAME=Laravel_prueba_backend
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:tvMrFMb6yZFhdTNB+VjzxvxgE3JGjy5NYljXtqJ0n34=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=prueba_backend
 DB_USERNAME=root
 DB_PASSWORD=
 
@@ -56,3 +56,5 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+OPENWEATHERMAP_API_KEY=d2e5b4d3ab6d4ef3c8f0b767da179b1f
